<resources>
    <string name="app_name">Group_Project_2</string>
    <string name="welcome_to_repsyche">RePsyche!</string>
    <string name="enter">Enter</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="don_t_have_an_account_click_here_to_sign_up">Don\'t have an account? Click here to sign up</string>
    <string name="scan">Scan a Barcode</string>
    <string name="login_prompt_text">Please fill in the details below to login</string>
    <string name="login_welcome">Welcome</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_prompt">We\'re happy you\'re here! Sign up to begin</string>
    <string name="balance_text">Your Credit Balance</string>
    <string name="user_text">Hey there!</string>
    <string name="make_purchase_text">Make a Purchase</string>
    <string name="select_user">Select User or relevant stakeholder</string>
    <string name="welcome_stake">Welcome</string>
    <string name="total_credit_text">Total Credits Available</string>
    <string name="current_level_text">Current bins and their levels</string>

    <string-array name="names">
        <item>User</item>
        <item>Zoomlion</item>
        <item>Akornor</item>
        <item>BigBen</item>
        <item>Essentials</item>

    </string-array>

    <string-array name="types">
        <item>Plastic</item>
        <item>Metal</item>
        <item>Paper</item>
        <item>Glass</item>

    </string-array>

</resources>
